<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/size"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <VideoView
        android:id="@+id/video_backgroud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:fontFamily="@font/humble"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp" />

    <RelativeLayout
        android:id="@+id/relative_container"
        android:layout_width="396dp"
        android:layout_height="456dp"
        android:layout_alignWithParentIfMissing="true"
        android:layout_above="@id/video_backgroud"
        android:layout_alignBaseline="@id/video_backgroud"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:background="@drawable/shape_background"
        android:layoutMode="clipBounds"
        android:soundEffectsEnabled="true"
        android:splitMotionEvents="false"
        android:textAlignment="viewStart"
        android:touchscreenBlocksFocus="true"
        android:transitionGroup="false"
        android:visibility="visible">

        <Button
            android:id="@+id/btnNewShowLogin"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="6dp"
            android:fontFamily="@font/letters"
            android:insetTop="0dp"
            android:text="Registration"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="visible"
            tools:visibility="visible" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutNewUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnNewShowLogin"
            android:layout_margin="10sp"
            android:hint="@string/new_user_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/letters"
                android:inputType="text"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputLayoutNewUserName"
            android:layout_margin="10sp"
            android:hint="@string/pass"
            android:textSize="20sp"
            android:textStyle="bold">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInputEditText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/letters"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_newregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputLayoutNewPassword"
            android:layout_alignRight="@id/inputLayoutNewPassword"
            android:layout_marginTop="115dp"
            android:ems="10"
            android:onClick="onClick"
            android:text="Register"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />



    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignStart="@id/video_backgroud"
        android:layout_alignTop="@id/tv_login"
        android:layout_alignRight="@id/relative_container"
        android:layout_marginStart="-37dp"
        android:layout_marginTop="-42dp"
        android:layout_marginRight="37dp"
        android:layoutDirection="locale"
        tools:ignore="ExtraText">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="104dp"
            android:layout_height="128dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.566"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.143"
            app:srcCompat="@drawable/background_logo" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="102dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layoutDirection="inherit"
            android:textAlignment="center"
            android:visibility="visible"
            app:barrierAllowsGoneWidgets="true"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:srcCompat="@drawable/logosho"
            tools:visibility="visible" /><![CDATA[







        android:layout_below="@+id/et_password"
        android:inputType="textPassword"
        android:hint="Confirm Password"/>







    ]]>
    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>






